--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'redis.clients:jedis'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.postgresql:postgresql:42.5.1'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'javax.xml.bind:jaxb-api:2.1'
     annotationProcessor 'org.projectlombok:lombok'
