--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.postgresql:postgresql:42.5.1'
     compileOnly 'org.projectlombok:lombok'
-    compileOnly 'javax.xml.bind:jaxb-api:2.1'
+    implementation 'javax.xml.bind:jaxb-api:2.1'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
